Render small images to improve perfomance on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,9 @@ body {
 .overlayed {
   overflow: hidden;
 }
+
+@media (max-width: '500px') {
+  .mobile-invisible {
+    display: none !important;
+  }
+}
